--- a/Unity.Multiplayer.Tools.MetricTestData.csproj
+++ b/Unity.Multiplayer.Tools.MetricTestData.csproj
@@ -50,7 +50,7 @@
     <UnityVersion>2022.3.9f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Analyzer Include="C:\Users\adada\.vscode\extensions\visualstudiotoolsforunity.vstuc-0.9.1\Analyzers\Microsoft.Unity.Analyzers.dll" />
+    <Analyzer Include="C:\Users\andre\.vscode\extensions\visualstudiotoolsforunity.vstuc-0.9.1\Analyzers\Microsoft.Unity.Analyzers.dll" />
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.9f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.SourceGenerators.dll" />
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.9f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
@@ -326,9 +326,6 @@
     <Reference Include="UnityEditor.WindowsStandalone.Extensions">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2022.3.9f1\Editor\Data\PlaybackEngines\WindowsStandaloneSupport\UnityEditor.WindowsStandalone.Extensions.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEditor.UWP.Extensions">
-      <HintPath>C:\Program Files\Unity\Hub\Editor\2022.3.9f1\Editor\Data\PlaybackEngines\MetroSupport\UnityEditor.UWP.Extensions.dll</HintPath>
-    </Reference>
     <Reference Include="Unity.VisualScripting.YamlDotNet">
       <HintPath>Library\PackageCache\com.unity.visualscripting@1.9.0\Editor\VisualScripting.Core\Dependencies\YamlDotNet\Unity.VisualScripting.YamlDotNet.dll</HintPath>
     </Reference>
@@ -365,26 +362,26 @@
     <Reference Include="unityplastic">
       <HintPath>Library\PackageCache\com.unity.collab-proxy@2.0.7\Lib\Editor\PlasticSCM\unityplastic.dll</HintPath>
     </Reference>
-    <Reference Include="Gtec.Chain.Common">
-      <HintPath>Assets\Plugins\Gtec.Chain.Common.dll</HintPath>
-    </Reference>
-    <Reference Include="ERPFlashController">
-      <HintPath>Assets\Plugins\ERPFlashController.dll</HintPath>
-    </Reference>
-    <Reference Include="UnicornDotNet">
-      <HintPath>Assets\Plugins\UnicornDotNet.dll</HintPath>
+    <Reference Include="ERPCustompropertydrawers">
+      <HintPath>Assets\Editor\ERPCustompropertydrawers.dll</HintPath>
     </Reference>
     <Reference Include="ERPBCIManager">
       <HintPath>Assets\Plugins\ERPBCIManager.dll</HintPath>
     </Reference>
-    <Reference Include="Gtec.Licensing.Unicorn.DotNet">
-      <HintPath>Assets\Plugins\Gtec.Licensing.Unicorn.DotNet.dll</HintPath>
-    </Reference>
-    <Reference Include="ERPCustompropertydrawers">
-      <HintPath>Assets\Editor\ERPCustompropertydrawers.dll</HintPath>
+    <Reference Include="Gtec.Chain.Common">
+      <HintPath>Assets\Plugins\Gtec.Chain.Common.dll</HintPath>
     </Reference>
     <Reference Include="Gtec.Chain.Windows.Devices.Unicorn">
       <HintPath>Assets\Plugins\Gtec.Chain.Windows.Devices.Unicorn.dll</HintPath>
+    </Reference>
+    <Reference Include="ERPFlashController">
+      <HintPath>Assets\Plugins\ERPFlashController.dll</HintPath>
+    </Reference>
+    <Reference Include="Gtec.Licensing.Unicorn.DotNet">
+      <HintPath>Assets\Plugins\Gtec.Licensing.Unicorn.DotNet.dll</HintPath>
+    </Reference>
+    <Reference Include="UnicornDotNet">
+      <HintPath>Assets\Plugins\UnicornDotNet.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2022.3.9f1\Editor\Data\UnityReferenceAssemblies\unity-4.8-api\mscorlib.dll</HintPath>
